Updated the observations

--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -361,7 +361,7 @@
    "source": [
     "### Observations:\n",
     "- All columns are very close to a normal distribution\n",
-    "- The target column is extremely unbalanced, with more than 96% of all data on the \"no failure\" class, determined by the 0\n",
+    "- The `target` column is extremely unbalanced, with more than 96% of all data on the \"no failure\" class, determined by the 0\n",
     "- The values of the columns are on different scales, with rotational_speed getting up to the thousands and torque staying in the tens\n",
     "### Impact:\n",
     "- In the future, some method of class balancing will be used in order to prevent the models from being extremely biased\n",
@@ -428,10 +428,10 @@
    "metadata": {},
    "source": [
     "### Observations:\n",
-    "- Just like the target column, failure_types is also extremely unbalanced\n",
+    "- Just like the `target` column, `failure_type` is also extremely unbalanced\n",
     "- Low quality products are the most produced ones, representing 60% of all products\n",
     "### Impact:\n",
-    "- Since the objective is to create a model to predict if the machine will fail or not, the failure_type column can be used during the data analysis and then discarded"
+    "- Since the objective is to create a model to predict if the machine will fail or not, the `failure_type` column can be used during the data analysis and then discarded"
    ]
   },
   {
@@ -476,14 +476,14 @@
    "metadata": {},
    "source": [
     "### Observations:\n",
-    "- The air_temperature and tool_wear columns present a very similar behavior, with the majority of failures appearing when they have high values\n",
-    "- The process_temperature column didn't present a clear pattern in relation to the target. The boxes of failure and no failure have very similar medians, with the failure box being more concentrated on the higher values of the process temperature, although, there are a few outliers when the temperature is low\n",
-    "- Rotational_speed and torque present opposite behaviors. Failures are very concentrated when the rotational_speed indicates a low value and, on the torque column, when it indicates high values\n",
+    "- The `air_temperature` and `tool_wear` columns present a very similar behavior, with the majority of failures appearing when they have high values\n",
+    "- The `process_temperature` column didn't present a clear pattern in relation to the `target` column. The boxes of failure and no failure have very similar medians, with the failure box being more concentrated on the higher values of the process temperature, although, there are a few outliers when the temperature is low\n",
+    "- `Rotational_speed` and `torque` present opposite behaviors. Failures are very concentrated when `rotational_speed` indicates a low value and, when `torque` indicates high values\n",
     "- The low quality product is the one with more failures, but that is expected since its the most produced type of product\n",
     "### Impact:\n",
-    "- Since the rotational_speed and torque columns showed opposite behaviors in relation to the target, it will be useful to investigate these columns in a multivariable analysis\n",
-    "- Despite the process_temperature column not showing a significant difference between failure and no failure, it would be interesting to see how it behaves together with the air_temperature column\n",
-    "- Using the type column, it is possible to filter the data by the products and examine each column to see if any product is more affected by one or more columns"
+    "- Since `rotational_speed` and `torque` columns showed opposite behaviors in relation to `target`, it will be useful to investigate these columns in a multivariable analysis\n",
+    "- Despite `process_temperature` not showing a significant difference between failure and no failure, it would be interesting to see how it behaves together with `air_temperature`\n",
+    "- Using the `type` column, it is possible to filter the data by the products and examine each column to see if any product is more affected by one or more columns"
    ]
   },
   {
@@ -565,11 +565,11 @@
    "metadata": {},
    "source": [
     "### Observations:\n",
-    "- All three types of products tend to have a spike in failures when the air temperature is high, especially when the temperature reaches 302K\n",
-    "- Low and medium quality products have an increase in failure when the process temperature reaches 310K, but the high quality products are considerably constant between all process temperatures\n",
-    "- All three types of products have a spike in failures when the rotational speed of the machine is below 1500 rpm\n",
-    "- Low and medium quality products have a spike in failures when the torque of the machine gets above 40 Nm. High quality products see this spike when the torque reaches approximately 50 Nm\n",
-    "- When the tool wear reaches 200min, all products have a spike on failures"
+    "- All three types of products tend to have a spike in failures when `air_temperature` is high, especially when the temperature reaches 302K\n",
+    "- Low and medium quality products have an increase in failure when `process_temperature` reaches 310K, but the high quality products are considerably constant between all temperatures\n",
+    "- All three types of products have a spike in failures when the `rotational_speed` of the machine is below 1500 rpm\n",
+    "- Low and medium quality products have a spike in failures when the `torque` of the machine gets above 40 Nm. High quality products see this spike when `torque` reaches approximately 50 Nm\n",
+    "- When `tool_wear` reaches 200min, all products have a spike on failures"
    ]
   },
   {
@@ -604,10 +604,10 @@
    "metadata": {},
    "source": [
     "### Observations:\n",
-    "- When plotting both temperatures on the same graph, it's clear that the heat dissipation failure occurs only when the air temperature reaches 302K and the process temperature reaches 310K. All other failures don't show a pattern with the temperatures, happening with low and high temperatures values\n",
-    "- Regarding the other graphs, the same pattern appears. The heat dissipation failure only occurs when the air temperature is above 302K\n",
+    "- When plotting both temperatures on the same graph, it's clear that the **heat dissipation** failure occurs only when `air_temperature` reaches 302K and `process_temperature` reaches 310K. All other failures don't show a pattern with the temperatures, happening with low and high values\n",
+    "- Regarding the other graphs, the same pattern appears. The **heat dissipation** failure only occurs when `air_temperature` is above 302K\n",
     "### Impact:\n",
-    "- Since the heat dissipation failure is concentrated in one place, it could be interesting to create a new feature containing the temperature difference or a bool feature that is positive when the air temperature is above 302K"
+    "- Since the **heat dissipation** failure is concentrated in one place, it could be interesting to create a new feature containing the temperature difference or a bool feature that is positive when `air_temperature` is above 302K"
    ]
   },
   {
@@ -642,7 +642,7 @@
    "metadata": {},
    "source": [
     "### Observations:\n",
-    "- Very similar behavior to the air temperature, with the heat dissipation failure occurring when the temperature is between 310K and 312K"
+    "- Very similar behavior to `air_temperature`, with the **heat dissipation** failure occurring when the temperature is between 310K and 312K"
    ]
   },
   {
@@ -677,10 +677,10 @@
    "metadata": {},
    "source": [
     "### Observations:\n",
-    "- This is an interesting feature. There are two types of failures that only occurs when the rotational speed is below 1500 rpm, with the heat dissipation failure completely dependent on the temperatures and the overstrain failure dependent on high torque and high tool wear\n",
-    "- Power failure occurs only when the rotational speed is completely opposite to the value of torque\n",
+    "- This is an interesting feature. There are two types of failures that only occurs when `rotational_speed` is below 1500 rpm, with the **heat dissipation** failure completely dependent on the temperatures and the **overstrain** failure dependent on high `torque` and high `tool_wear`\n",
+    "- **Power** failure occurs only when `rotational_speed` is completely opposite to the value of `torque`\n",
     "### Impact:\n",
-    "- Since the rotational speed and torque have opposite behaviors, it would be interesting to create a feature that represents power (rpm X torque) or a bool feature that is positive when the values of these columns are within the failure threshold"
+    "- Since `rotational_speed` and `torque` have opposite behaviors, it would be interesting to create a feature that represents power (rpm X torque) or a bool feature that is positive when the values of these columns are within the failure threshold"
    ]
   },
   {
@@ -715,7 +715,7 @@
    "metadata": {},
    "source": [
     "### Observations\n",
-    "- Complete opposite behavior in relation to the rotational speed, with the majority of failures occurring when the torque value is high"
+    "- Complete opposite behavior in relation to `rotational_speed`, with the majority of failures occurring when `torque` value is high"
    ]
   },
   {
@@ -750,7 +750,7 @@
    "metadata": {},
    "source": [
     "### Observations:\n",
-    "- The tool wear failure is only related to the tool wear values. This and the overstrain failure occurs only when the tool wear is too high, approximately above 180min, with the tool wear failure being independent in relation to the other features"
+    "- The **tool wear** failure is only related to `tool_wear` values. This and the **overstrain** failure occurs only when `tool_wear` is too high, approximately above 180min, with the **tool wear** failure being independent in relation to the other features"
    ]
   },
   {
@@ -760,16 +760,16 @@
     "# Summary\n",
     "\n",
     "### Main Insights:\n",
-    "- The target column is extremely unbalanced, with more than 96% of all data on the \"no failure\" class, determined by the 0\n",
-    "- The air_temperature and tool_wear columns present a very similar behavior, with the majority of failures appearing when they have high values\n",
-    "- Rotational_speed and torque present opposite behaviors. Failures are very concentrated when the rotational_speed indicates a low value and, on the torque column, when it indicates high values\n",
-    "- There are two types of failures that only occurs when the rotational speed is below 1500 rpm, with the heat dissipation failure completely dependent on the temperatures and the overstrain failure dependent on high torque and high tool wear\n",
+    "- The `target` column is extremely unbalanced, with more than 96% of all data on the \"no failure\" class, determined by the 0\n",
+    "- The `air_temperature` and `tool_wear` columns present a very similar behavior, with the majority of failures appearing when they have high values\n",
+    "- `Rotational_speed` and `torque` present opposite behaviors. Failures are very concentrated when `rotational_speed` indicates a low value and, when `torque` indicates high values\n",
+    "- There are two types of failures that only occurs when `rotational_speed` is below 1500 rpm, with the **heat dissipation** failure completely dependent on the temperatures and the **overstrain** failure dependent on high `torque` and high `tool_wear`\n",
     "\n",
     "### Implications for Feature Engineering and Modelling\n",
     "- Class balancing methods needs to be used\n",
     "- Data will need to be scaled\n",
-    "- Since the rotational speed and torque have opposite behaviors, it would be interesting to create a feature that represents power (rpm X torque) to better detect all failures that are directly dependent on these columns values\n",
-    "- Since the heat dissipation failure is concentrated in one place, it could be interesting to create a new feature containing the temperature difference\n"
+    "- Since `rotational_speed` and `torque` have opposite behaviors, it would be interesting to create a feature that represents power (rpm X torque) to better detect all failures that are directly dependent on these columns values\n",
+    "- Since **heat dissipation** failure is concentrated in one place, it could be interesting to create a new feature containing the temperature difference\n"
    ]
   }
  ],
