--- a/Notebooks/Feature Engineering.ipynb
+++ b/Notebooks/Feature Engineering.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import pandas as pd\n",
     "sys.path.append('../')\n",
-    "from utils.eng_preprocess import plot_corr, saving_pipeline"
+    "from utils.engineering import plot_corr, saving_datasets"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4          9       0   No Failure  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "4          9       0  56320.0                  -10.5  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "4    L          9       0  56320.0                  -10.5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,13 +474,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "saving_pipeline(df, \"Original_CSV\", \"original\", 0.3, 42)\n",
-    "saving_pipeline(df_all_features, \"All_Features_CSV\", \"all_features\", 0.3, 42)\n",
-    "saving_pipeline(df_features, \"New_Features_CSV\", \"new_features\", 0.3, 42)"
+    "saving_datasets(df, \"Ml_Datasets\", \"original\")\n",
+    "saving_datasets(df_all_features, \"Ml_Datasets\", \"all_features\")\n",
+    "saving_datasets(df_features, \"Ml_Datasets\", \"new_features\")"
    ]
   }
  ],
