--- a/Notebooks/Feature Engineering.ipynb
+++ b/Notebooks/Feature Engineering.ipynb
@@ -350,119 +350,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_features = df_all_features.copy()\n",
-    "df_features = df_all_features.drop(columns=['torque', 'rotational_speed', 'process_temperature', 'air_temperature'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>tool_wear</th>\n",
-       "      <th>target</th>\n",
-       "      <th>power</th>\n",
-       "      <th>diference_temperature</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>M</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>66382.8</td>\n",
-       "      <td>-10.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>L</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65190.4</td>\n",
-       "      <td>-10.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>L</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>74001.2</td>\n",
-       "      <td>-10.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>L</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>56603.5</td>\n",
-       "      <td>-10.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>L</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>56320.0</td>\n",
-       "      <td>-10.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  type  tool_wear  target    power  diference_temperature\n",
-       "0    M          0       0  66382.8                  -10.5\n",
-       "1    L          3       0  65190.4                  -10.5\n",
-       "2    L          5       0  74001.2                  -10.4\n",
-       "3    L          7       0  56603.5                  -10.4\n",
-       "4    L          9       0  56320.0                  -10.5"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_features.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Observations:\n",
-    "- Two datasets were created, one containing all original features and the new ones, and the other containing only the new ones and some of the originals\n",
+    "- A second dataframe was created. It includes the new features\n",
     "### Impact:\n",
-    "- All three datasets will be used on the modeling part to make sure that the best possible model is created, both in terms of metrics and process time"
+    "- Both dataframes will be used on the modeling part to make sure that the best possible model is created, both in terms of metrics and process time"
    ]
   },
   {
@@ -479,8 +373,7 @@
    "outputs": [],
    "source": [
     "saving_datasets(df, \"Ml_Datasets\", \"original\")\n",
-    "saving_datasets(df_all_features, \"Ml_Datasets\", \"all_features\")\n",
-    "saving_datasets(df_features, \"Ml_Datasets\", \"new_features\")"
+    "saving_datasets(df_all_features, \"Ml_Datasets\", \"all_features\")"
    ]
   }
  ],
