Added documentation and classes

--- a/Notebooks/Model Training.ipynb
+++ b/Notebooks/Model Training.ipynb
@@ -18,7 +18,17 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import sys\n",
     "sys.path.append('../')\n",
-    "from utils.machine_learning import preprocess_pipeline, evaluate_models, visualize_roc_curves, visualize_confusion_matrix, initiate_model_trainer, plot_precision_recall_threshold, plot_feature_importance"
+    "from utils.machine_learning import ModelTraining, MetricsVisualizations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = ModelTraining()\n",
+    "visualization = MetricsVisualizations()"
    ]
   },
   {
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_original, X_test_original, y_train_original, y_test_original = preprocess_pipeline(df_original, test_size=0.3, target_name=\"target\")\n",
-    "X_train_all, X_test_all, y_train_all, y_test_all = preprocess_pipeline(df_all, test_size=0.3, target_name=\"target\")"
+    "X_train_original, X_test_original, y_train_original, y_test_original = trainer.preprocess_data(df_original, test_size=0.3, target_name=\"target\")\n",
+    "X_train_all, X_test_all, y_train_all, y_test_all = trainer.preprocess_data(df_all, test_size=0.3, target_name=\"target\")"
    ]
   },
   {
@@ -113,7 +123,7 @@
     }
    ],
    "source": [
-    "model_report_original = initiate_model_trainer((X_train_original, y_train_original, X_test_original, y_test_original), \"Original_Features\", use_smote=False)"
+    "model_report_original = trainer.initiate_model_trainer((X_train_original, y_train_original, X_test_original, y_test_original), \"Original_Features\", use_smote=False)"
    ]
   },
   {
@@ -133,7 +143,7 @@
     }
    ],
    "source": [
-    "visualize_confusion_matrix(y_test_original, model_report_original, 3, 2)"
+    "visualization.visualize_confusion_matrix(y_test_original, model_report_original, 3, 2)"
    ]
   },
   {
@@ -163,7 +173,7 @@
     }
    ],
    "source": [
-    "visualize_roc_curves(model_report_original)"
+    "visualization.visualize_roc_curves(model_report_original)"
    ]
   },
   {
@@ -193,7 +203,7 @@
     }
    ],
    "source": [
-    "plot_precision_recall_threshold(y_test_original, X_test_original, model_report_original, 1, 3)"
+    "visualization.plot_precision_recall_threshold(y_test_original, X_test_original, model_report_original, 1, 3)"
    ]
   },
   {
@@ -221,7 +231,7 @@
     }
    ],
    "source": [
-    "plot_feature_importance(y_test_original, X_test_original, model_report_original, \"recall\", 1, 3)"
+    "visualization.plot_feature_importance(y_test_original, X_test_original, model_report_original, \"recall\", 1, 3)"
    ]
   },
   {
@@ -263,7 +273,7 @@
     }
    ],
    "source": [
-    "model_report_original_smote = initiate_model_trainer((X_train_original, y_train_original, X_test_original, y_test_original), \"Original_Features\", use_smote=True)"
+    "model_report_original_smote = trainer.initiate_model_trainer((X_train_original, y_train_original, X_test_original, y_test_original), \"Original_Features\", use_smote=True)"
    ]
   },
   {
@@ -283,7 +293,7 @@
     }
    ],
    "source": [
-    "visualize_confusion_matrix(y_test_original, model_report_original_smote, 3, 2)"
+    "visualization.visualize_confusion_matrix(y_test_original, model_report_original_smote, 3, 2)"
    ]
   },
   {
@@ -313,7 +323,7 @@
     }
    ],
    "source": [
-    "visualize_roc_curves(model_report_original_smote)"
+    "visualization.visualize_roc_curves(model_report_original_smote)"
    ]
   },
   {
@@ -343,7 +353,7 @@
     }
    ],
    "source": [
-    "plot_precision_recall_threshold(y_test_original, X_test_original, model_report_original_smote, 1, 3)"
+    "visualization.plot_precision_recall_threshold(y_test_original, X_test_original, model_report_original_smote, 1, 3)"
    ]
   },
   {
@@ -373,7 +383,7 @@
     }
    ],
    "source": [
-    "plot_feature_importance(y_test_original, X_test_original, model_report_original_smote, \"recall\", 1, 3)"
+    "visualization.plot_feature_importance(y_test_original, X_test_original, model_report_original_smote, \"recall\", 1, 3)"
    ]
   },
   {
@@ -422,7 +432,7 @@
     }
    ],
    "source": [
-    "model_report_all = initiate_model_trainer((X_train_all, y_train_all, X_test_all, y_test_all), \"All_Features\", use_smote=False)"
+    "model_report_all = trainer.initiate_model_trainer((X_train_all, y_train_all, X_test_all, y_test_all), \"All_Features\", use_smote=False)"
    ]
   },
   {
@@ -442,7 +452,7 @@
     }
    ],
    "source": [
-    "visualize_confusion_matrix(y_test_all, model_report_all, 3, 2)"
+    "visualization.visualize_confusion_matrix(y_test_all, model_report_all, 3, 2)"
    ]
   },
   {
@@ -472,7 +482,7 @@
     }
    ],
    "source": [
-    "visualize_roc_curves(model_report_all)"
+    "visualization.visualize_roc_curves(model_report_all)"
    ]
   },
   {
@@ -502,7 +512,7 @@
     }
    ],
    "source": [
-    "plot_precision_recall_threshold(y_test_all, X_test_all, model_report_all, 1, 3)"
+    "visualization.plot_precision_recall_threshold(y_test_all, X_test_all, model_report_all, 1, 3)"
    ]
   },
   {
@@ -531,7 +541,7 @@
     }
    ],
    "source": [
-    "plot_feature_importance(y_test_all, X_test_all, model_report_all, \"recall\", 1, 3)"
+    "visualization.plot_feature_importance(y_test_all, X_test_all, model_report_all, \"recall\", 1, 3)"
    ]
   },
   {
@@ -572,7 +582,7 @@
     }
    ],
    "source": [
-    "model_report_all_smote = initiate_model_trainer((X_train_all, y_train_all, X_test_all, y_test_all), \"All_Features\", use_smote=True)"
+    "model_report_all_smote = trainer.initiate_model_trainer((X_train_all, y_train_all, X_test_all, y_test_all), \"All_Features\", use_smote=True)"
    ]
   },
   {
@@ -592,7 +602,7 @@
     }
    ],
    "source": [
-    "visualize_confusion_matrix(y_test_all, model_report_all_smote, 3, 2)"
+    "visualization.visualize_confusion_matrix(y_test_all, model_report_all_smote, 3, 2)"
    ]
   },
   {
@@ -622,7 +632,7 @@
     }
    ],
    "source": [
-    "visualize_roc_curves(model_report_all_smote)"
+    "visualization.visualize_roc_curves(model_report_all_smote)"
    ]
   },
   {
@@ -650,7 +660,7 @@
     }
    ],
    "source": [
-    "plot_precision_recall_threshold(y_test_all, X_test_all, model_report_all_smote, 1, 3)"
+    "visualization.plot_precision_recall_threshold(y_test_all, X_test_all, model_report_all_smote, 1, 3)"
    ]
   },
   {
@@ -678,7 +688,7 @@
     }
    ],
    "source": [
-    "plot_feature_importance(y_test_all, X_test_all, model_report_all_smote, \"recall\", 1, 3)"
+    "visualization.plot_feature_importance(y_test_all, X_test_all, model_report_all_smote, \"recall\", 1, 3)"
    ]
   },
   {
