Fixed scaling bug and created a preprocessor obj

--- a/Notebooks/Model Training.ipynb
+++ b/Notebooks/Model Training.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_original, X_test_original, y_train_original, y_test_original = trainer.preprocess_data(df_original, test_size=0.3, target_name=\"target\")\n",
+    "X_train_original, X_test_original, y_train_original, y_test_original = trainer.preprocess_data(df_original, test_size=0.3, target_name=\"target\", original=True)\n",
     "X_train_all, X_test_all, y_train_all, y_test_all = trainer.preprocess_data(df_all, test_size=0.3, target_name=\"target\")"
    ]
   },
